Frankbelford/uatv1ba/force-app/main/default/objects/Brand__mdt/Brand__mdt.object-meta.xml
<CustomObject>
    <label>Brand</label>
    <pluralLabel>Brands</pluralLabel>
</CustomObject>