Frankbelford/uatv1ba/force-app/main/default/objects/Brand__mdt/fields/Default_Logo__c.field-meta.xml
<CustomField>
    <fullName>Default_Logo__c</fullName>
    <inlineHelpText>Name of the Static Resource which is image type. For example Blue_Arrow_new_logo</inlineHelpText>
    <label>Default Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>