Frankbelford/uatv1ba/force-app/main/default/objects/Brand__mdt/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <description>Company Registered Address.</description>
    <label>Registered Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>