Frankbelford/uatv1ba/force-app/main/default/objects/Brand__mdt/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <description>Company Registration number</description>
    <label>Registration No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>